Header aligned and general corrections

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,28 +23,35 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* 
- * HEADER 
+ * MAIN HEADER 
  */
 
-.header {
+.main-header {
     height: 100vh;
     position: relative;
 }
 
-.header-bg {
+.main-header-bg {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: linear-gradient(10deg, red, orange);
     z-index: -1;
 }
 
-.inner-header {
+.main-header-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.main-header-top {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    flex-wrap: wrap;
     padding: 20px 0;
 }
 
@@ -80,6 +87,11 @@ h1, h2, h3, h4, h5, h6 {
 /* Hero */
 
 .hero {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -94,8 +106,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero h3 {
-    color: lightgray;
-    margin: 50px 0;
+    color: white;
+    margin: 30px 0 60px 0;
 }
 
 .hero-btn {
@@ -106,4 +118,21 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     padding: 15px 40px;
     border-radius: 2px;
+}
+
+
+
+
+/* 
+
+    RESPONSIVE DESIGN
+
+*/
+@media (max-width: 768px) {
+
+    .main-header-top {
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
